# husky_xarm6_mcr

./: .gitmodules  README.md  dependencies.repos  requirements.txt
husky_xarm6_mcr_bringup/: CMakeLists.txt  README.md  joint_poses.txt  package.xml
husky_xarm6_mcr_bringup/config/: robot_localization_params.yaml
husky_xarm6_mcr_bringup/launch/: bringup.launch.py  bringup_server.launch.py  localization.launch.py  run.launch.py  sim_control_only.launch.py
husky_xarm6_mcr_bringup/rviz/: view.rviz
husky_xarm6_mcr_bringup/src/: get_eef_pose.cpp  map_frame_publisher.cpp  plan_linear_cart.cpp  plan_square_cart.cpp  plan_square_joint.cpp  plan_to_joint.cpp  plan_to_xyz.cpp  sanity_check.cpp
husky_xarm6_mcr_control/: CMakeLists.txt  README.md  package.xml
husky_xarm6_mcr_description/: CMakeLists.txt  package.xml
husky_xarm6_mcr_gz/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
husky_xarm6_mcr_gz/husky_xarm6_mcr_gz/: gazebo_viewpoint_capture_node.py  generate_aruco_models.py
husky_xarm6_mcr_gz/launch/: apple_orchard.launch.py  camera_probe_gz.launch.py  gazebo.launch.py
husky_xarm6_mcr_gz/models/apple_orchard/: model.config  model.sdf
husky_xarm6_mcr_gz/models/apple_tree_1/: model.config  model.sdf
husky_xarm6_mcr_gz/models/apple_tree_2/: model.config  model.sdf
husky_xarm6_mcr_gz/models/apple_tree_3/: model.config  model.sdf
husky_xarm6_mcr_gz/models/apple_tree_4/: model.config  model.sdf
husky_xarm6_mcr_gz/models/apple_tree_5/: model.config  model.sdf
husky_xarm6_mcr_gz/models/aruco_marker_0/: model.config  model.sdf
husky_xarm6_mcr_gz/models/aruco_marker_1/: model.config  model.sdf
husky_xarm6_mcr_gz/tools/: generate_aruco_markers.py  generate_aruco_models.py  generate_aruco_pdf.py
husky_xarm6_mcr_gz/worlds/: apple_orchard.sdf  apple_tree_1.sdf  apple_tree_1_marked.sdf  apple_tree_2.sdf  apple_tree_2_marked.sdf  apple_tree_3.sdf  apple_tree_3_marked.sdf  apple_tree_4.sdf  apple_tree_4_marked.sdf  apple_tree_5.sdf  apple_tree_5_marked.sdf  empty.sdf  fb_tree.sdf  fb_tree_marked.sdf
husky_xarm6_mcr_moveit_config/: .setup_assistant  CMakeLists.txt  moveit_config_joint_limits.xml  moveit_config_planning_pipelines.xml  moveit_config_robot_description.xml  moveit_config_robot_description_kinematic.xml  moveit_config_robot_description_semantic.xml  moveit_config_to_dict.xml  package.xml
husky_xarm6_mcr_nbv_planner/: CMakeLists.txt  NBV_PLANNER_SUMMARY.md  experiments.sh  package.xml
husky_xarm6_mcr_nbv_planner/data/: .gitkeep  README.md
husky_xarm6_mcr_nbv_planner/include/husky_xarm6_mcr_nbv_planner/: cluster.hpp  conversions.hpp  geometry_utils.hpp  manipulation_workspace.hpp  moveit_interface.hpp  nbv_planner_utils.hpp  nbv_types.hpp  nbv_visualizer.hpp  octomap_interface.hpp  semantic_point.hpp  viewpoint.hpp  viewpoint_generation.hpp
husky_xarm6_mcr_nbv_planner/launch/: moveit_interface_demo.launch.py  nbv_baseline_demo.launch.py  nbv_demo.launch.py  nbv_volumetric_planner_demo.launch.py  octomap_interface_demo.launch.py
husky_xarm6_mcr_nbv_planner/metrics/: replot_metrics.py
husky_xarm6_mcr_nbv_planner/metrics/gt_points/: aruco_gt_points_lab.yaml  aruco_gt_points_real.yaml  sim_aruco_gt_points.yaml  sim_tree_1_gt.yaml  sim_tree_1_gt_reachable.yaml  sim_tree_2_gt.yaml  sim_tree_2_gt_reachable.yaml  sim_tree_3_gt.yaml  sim_tree_3_gt_reachable.yaml  sim_tree_4_gt.yaml  sim_tree_4_gt_reachable.yaml  sim_tree_5_gt.yaml  sim_tree_5_gt_reachable.yaml
husky_xarm6_mcr_nbv_planner/src/: manipulation_workspace.cpp  moveit_interface.cpp  moveit_interface_demo.cpp  nbv_baseline_demo.cpp  nbv_semantic_planner_demo.cpp  nbv_visualizer.cpp  nbv_volumetric_planner_demo.cpp  octomap_interface.cpp  octomap_interface_demo.cpp  paper_demo.cpp  viewpoint_generation.cpp
husky_xarm6_mcr_occupancy_map/: ARCHITECTURE.md  CMakeLists.txt  README.md  octomap.md  package.xml
husky_xarm6_mcr_occupancy_map/config/: occupancy_map_params.yaml
husky_xarm6_mcr_occupancy_map/data/: .gitkeep  README.md  octomap_20260115_135900.bt
husky_xarm6_mcr_occupancy_map/include/husky_xarm6_mcr_occupancy_map/: depth_image_updater.hpp  occupancy_map_monitor.hpp  occupancy_map_tree.hpp  occupancy_map_updater.hpp  occupancy_map_visualizer.hpp  pointcloud_updater.hpp  semantic_occupancy_map_monitor.hpp  semantic_occupancy_map_tree.hpp  semantic_pointcloud_updater.hpp  voxel_grid_publisher.hpp
husky_xarm6_mcr_occupancy_map/launch/: load_octomap.launch.py  moveit_octomap.launch.py  occupancy_map.launch.py  octomap.launch.py  save_octomap.launch.py
husky_xarm6_mcr_occupancy_map/metrics/gt_points/: sim_aruco_gt_points.yaml
husky_xarm6_mcr_occupancy_map/msg/: CustomOctomap.msg  VoxelGrid.msg
husky_xarm6_mcr_occupancy_map/src/: depth_image_updater.cpp  moveit_octomap_server.cpp  occupancy_map_monitor.cpp  occupancy_map_server.cpp  occupancy_map_tree.cpp  occupancy_map_updater.cpp  occupancy_map_visualizer.cpp  octomap_loader.cpp  octomap_saver.cpp  octomap_server.cpp  pointcloud_updater.cpp  semantic_occupancy_map_monitor.cpp  semantic_occupancy_map_tree.cpp  semantic_pointcloud_updater.cpp  voxel_grid_publisher.cpp
husky_xarm6_mcr_planning/: CMakeLists.txt  OCCUPANCY_MAPPING.md  PLANNING_STRATEGIES.md  QUICK_START.md  README.md  ROADMAP.md  package.xml
husky_xarm6_mcr_planning/config/: nbv_planner.yaml
husky_xarm6_mcr_planning/husky_xarm6_mcr_planning/motion_interface/: __init__.py  moveit_interface.py
husky_xarm6_mcr_planning/husky_xarm6_mcr_planning/perception/: __init__.py  occupancy_map.py  volumetric_map.py
husky_xarm6_mcr_planning/husky_xarm6_mcr_planning/planners/: __init__.py  learning_nbv_template.py  nbv_planner.py
husky_xarm6_mcr_planning/include/husky_xarm6_mcr_planning/: moveit_cpp_interface.hpp
husky_xarm6_mcr_planning/launch/: nbv_planning.launch.py  occupancy_map.launch.py  volumetric_map.launch.py
husky_xarm6_mcr_planning/rviz/: view.rviz
husky_xarm6_mcr_planning/scripts/: moveit_interface_node  nbv_planner_node  occupancy_map_node  volumetric_map_node
husky_xarm6_mcr_planning/src/: moveit_cpp_interface.cpp
(+43 files in other folders)
