<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>husky_xarm6_mcr_bringup</name>
    <version>0.0.0</version>
    <description>Bringup launch files for Husky xArm6 MCR system</description>
    <maintainer email="hayden4feddock@gmail.com">hayden</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>tf2_ros</depend>
    <depend>geometry_msgs</depend>

    <!-- <exec_depend>husky_xarm6_mcr_description</exec_depend>
    <exec_depend>husky_xarm6_mcr_control</exec_depend>
    <exec_depend>husky_xarm6_mcr_moveit_config</exec_depend>
    <exec_depend>husky_xarm6_mcr_gz</exec_depend>
    <exec_depend>ros_gz_sim</exec_depend>
    <exec_depend>ros_gz_bridge</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>controller_manager</exec_depend> -->

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
